[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-kernel-namespace"
description = "Module to handle kernel namespaces."
requires-python = ">=3.10, <3.14"
version = "1.8.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-kernel-namespace"
Issues = "https://github.com/intel/mfd-kernel-namespace/issues"
Changelog = "https://github.com/intel/mfd-kernel-namespace/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]